# aoc20

./: Cargo.toml  README.md  run.sh
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayX.rs  main.rs  prelude.rs  vm.rs
src/util/: mod.rs
src/util/ext_traits/: array_ext.rs  iter_ext.rs  slice_ext.rs
